--- a/recipes/DalMakhani.html
+++ b/recipes/DalMakhani.html
@@ -35,19 +35,21 @@
         <li>½ cup cream (Optional)</li>
     </ul>
     <h2>Instructions</h2>
+    <ol type="i">
     <dl>
-        <dt> <strong>Step 1</strong></dt>
+        <li> <dt> <strong>Step 1</strong></dt></li>
         <dd>Place lentils and kidney beans in a large bowl; cover with plenty of water. Soak for at least 2 hours or overnight. Drain.</dd>
-        <dt><strong>Step 2</strong></dt>
+        <li><dt><strong>Step 2</strong></dt></li>
         <dd>Cook lentils, kidney beans, 5 cups water, and salt in a pot over medium heat until tender, stirring occasionally, about 1 hour. Remove from heat and set aside. Keep the lentils, kidney beans, and any excess cooking water in the pot.</dd>
-        <dt><strong>Step 3</strong></dt>
+        <li><dt><strong>Step 3</strong></dt></li>
         <dd>Heat vegetable oil in a saucepan over medium-high heat. Cook cumin seeds in the hot oil until they begin to pop, 1 to 2 minutes. Add cardamom pods, cinnamon stick, bay leaves, and cloves; cook until bay leaves turn brown, about 1 minute. Reduce heat to medium-low; add ginger paste, garlic paste, turmeric, and cayenne pepper. Stir to coat.</dd>
-        <dt><strong>Step 4</strong></dt>
+        <li><dt><strong>Step 4</strong></dt></li>
         <dd>Stir tomato puree into spice mixture; cook over medium heat until slightly reduced, about 5 minutes. Add chili powder, coriander, and butter; cook and stir until butter is melted.</dd>
-        <dt><strong>Step 5</strong></dt>
+        <li><dt><strong>Step 5</strong></dt></li>
         <dd>Stir lentils, kidney beans and any leftover cooking water into tomato mixture; bring to a boil, reduce heat to low. Stir fenugreek into lentil mixture. Cover saucepan and simmer until heated through, stirring occasionally, about 45 minutes. Add cream and cook until heated through, 2 to 4 minutes.</dd>
     
     
     </dl>
+    </ol>
 </body>
 </html>
