--- a/recipes/palakpaneer.html
+++ b/recipes/palakpaneer.html
@@ -30,19 +30,21 @@
         <li> 1 pinch salt to taste </li>
     </ul>
     <h2>Instructions</h2>
+    <ol type="i"> 
     <dl>
-        <dt> <strong>Step 1</strong></dt>
+        <li><dt> <strong>Step 1</strong></dt></li>
         <dd>Heat a skillet coated with cooking spray over medium heat; fry paneer cubes until lightly browned on each side, about 5 minutes. Transfer paneer to a bowl.</dd>
-        <dt><strong>Step 2</strong></dt>
+        <li><dt><strong>Step 2</strong></dt></li>
         <dd>Heat 1 tablespoon canola oil in the same skillet used to cook paneer over medium heat. Add cumin seeds and cook until seeds are slightly red. Stir water, spinach, tomato, garlic, chile peppers, ginger, curry powder, ground coriander, and ground turmeric into cumin seeds. Season with salt.</dd>
-        <dt><strong>Step 3</strong></dt>
+        <li><dt><strong>Step 3</strong></dt></li>
         <dd>Bring spinach mixture to a boil and simmer until garlic is very soft, 15 to 20 minutes. Remove from heat and allow mixture to cool.</dd>
-        <dt><strong>Step 4</strong></dt>
+        <li><dt><strong>Step 4</strong></dt></li>
         <dd>Transfer spinach mixture to a blender or food processor; puree until smooth.</dd>
-        <dt><strong>Step 5</strong></dt>
+        <li><dt><strong>Step 5</strong></dt></li>
         <dd>Heat remaining 1 tablespoon canola oil in a saucepan over medium heat; add spinach puree and paneer cubes. Simmer until hot, about 5 minutes.</dd>
     
     
     </dl>
+    </ol>   
 </body>
 </html>
