add link to main page in the recipe pages and an image in index.html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <h2>A small collection of recipes</h2>
+    <img src="https://images.pexels.com/photos/8649386/pexels-photo-8649386.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt="Picture of spices">
+    <h2>Some Indian Recipes</h2>
     <ol>
         <li><a href="./recipes/palakpaneer.html"> Palak Paneer </a></li>
         <li><a href="./recipes/palakpaneer.html"> Dal Makhani </a></li>
-        <li><a href></a></li>
+        <li><a href="./recipes/pavbhaji.html">Pav Bhaji</a></li>
     </ol>
 </body>
 </html>
