--- a/recipes/palakpaneer.html
+++ b/recipes/palakpaneer.html
@@ -45,6 +45,7 @@
     
     
     </dl>
-    </ol>   
+    </ol>
+    <em><a href="../index.html">Return to the main page</a></em>
 </body>
 </html>
