--- a/recipes/pavbhaji.html
+++ b/recipes/pavbhaji.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Pav Bhaji</h1>
-    <img src="https://5.imimg.com/data5/KC/PB/CU/ANDROID-31211399/product-jpeg-500x500.jpg">
+    <img src="https://5.imimg.com/data5/KC/PB/CU/ANDROID-31211399/product-jpeg-500x500.jpg" alt="picture of pav bhaji">
     <p>Pav Bhaji is a fast food dish from Mumbai (Bombay), India, consisting of a vegetable curry (bhaji) cooked in tomato gravy and served with a soft bread roll (pav).</p>
     <h2>Ingredients</h2>
     <ul>
@@ -42,5 +42,6 @@
         </dl>
 
     </ol>
+    <em><a href="../index.html">Return to the main page</a></em>
 </body>
 </html>
