corrected link to DalMakhani.html in Index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Some Indian Recipes</h2>
     <ol>
         <li><a href="./recipes/palakpaneer.html"> Palak Paneer </a></li>
-        <li><a href="./recipes/palakpaneer.html"> Dal Makhani </a></li>
+        <li><a href="./recipes/DalMakhani.html"> Dal Makhani </a></li>
         <li><a href="./recipes/pavbhaji.html"> Pav Bhaji </a></li>
     </ol>
 </body>
