added link to top of the page in recipe pages

--- a/recipes/DalMakhani.html
+++ b/recipes/DalMakhani.html
@@ -7,7 +7,7 @@
     <title>Dal Makhani</title>
 </head>
 <body>
-    <h1>Dal Makhani</h1>
+    <h1><a id="Top_of_page">Dal Makhani</a></h1>
     <img src="https://steemitimages.com/DQmbhv7wQ4KXQCPHf2W9ZVZRyZxPcRu56NG6o9rcQe3tSKT/Dal-Makhani.jpg" alt="Dal Makhani Image">
     <p>Dal Makhani is a rich creamy dal in a butter gravy. Originated in Punjab, the dish is very popular all over North India. No special occasion is complete without this dish. Made using black urad dal, rajma and spices, this delicious side dish is served with roti, naan, pulao or jeera rice.</p>
     <h2>Ingredients</h2>
@@ -51,6 +51,7 @@
     
     </dl>
     </ol>
-    <em><a href="../index.html">Return to the main page</a></em>
+    <p><em><a href="../index.html">Return to the main page</a></em></p>
+    <p><em><a href="#Top_of_page">Click to return to the Top of the page</a></em></p>
 </body>
 </html>
