--- a/recipes/pavbhaji.html
+++ b/recipes/pavbhaji.html
@@ -7,7 +7,7 @@
     <title>Pav Bhaji</title>
 </head>
 <body>
-    <h1>Pav Bhaji</h1>
+    <h1><a id="Top_of_page">Pav Bhaji</a></h1>
     <img src="https://5.imimg.com/data5/KC/PB/CU/ANDROID-31211399/product-jpeg-500x500.jpg" alt="picture of pav bhaji">
     <p>Pav Bhaji is a fast food dish from Mumbai (Bombay), India, consisting of a vegetable curry (bhaji) cooked in tomato gravy and served with a soft bread roll (pav).</p>
     <h2>Ingredients</h2>
@@ -42,6 +42,7 @@
         </dl>
 
     </ol>
-    <em><a href="../index.html">Return to the main page</a></em>
+   <p><em><a href="../index.html">Return to the main page</a></em> </p>
+    <p><em><a href="#Top_of_page">Click to return to the Top of the page</a></em></p>
 </body>
 </html>
